@@ -3,6 +3,7 @@ Revision history for JSON-MaybeXS
  - fix "can I haz XS?" logic precedence in Makefile.PL
  - added the ':all' export tag
  - removed dependency on Safe::Isa
+ - repository moved to git://git.shadowcat.co.uk/p5sagit/JSON-MaybeXS.git
 
 1.002004 - 2014-10-11
  - support use of PUREPERL_ONLY in Makefile.PL to avoid adding an XS
